# inbrief-scraper

./: .env-example  .gitignore  Dockerfile  justfile  pyproject.toml
src/: config.py  context.py  entities.py  exporters.py  generate_session.py  main.py  models.py  scraper.py  utils.py
