[project]
name = "inbrief-scraper"
version = "0.1.0"
description = "InBrief Scraper Service"
authors = [
    { name = "Nikita Rydanov", email = "find.art.in.living@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.110.1",
    "pydantic>=2.10.3",
    "telethon>=1.34.0",
    "asgi-correlation-id>=4.3.1",
    "pydantic-settings>=2.2.1",
    "uvicorn>=0.29.0",
    "databases[asyncpg]>=0.9.0",
    "faststream[kafka]>=0.5.33",
    "numpy>=2.2.0",
    "redis[hiredis]>=5.2.1",
    "rb-tocase>=1.3.2",
    "shared",
]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
    "ipython>=8.24.0",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/inbrief_scraper"]

[tool.ruff]
line-length = 79
target-version = "py313"
exclude = [
    "**/__pycache__",
    "./.venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false

[tool.vulture]
ignore_decorators = ["@app.*", "@require_*"]
min_confidence = 60
sort_by_size = true
